@@ -32,3 +32,6 @@ Support Request | view
 Visit | assessment
 Visit | preview
 Visit | view
+Web Message | assessment
+Web Message | preview
+Web Message | view
