@@ -5,6 +5,7 @@ Event Module | Mail Message
 Event Module | Note
 Event Module | Phone Call
 Event Module | Visit
+Event Module | Web Message
 Meeting Module | Meeting
 Sale Opportunity Module | Sale Opportunity
 Support Request Module | Support Request
